Test: Updated all CSS Footer Modals with content and styling.

--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -89,15 +89,15 @@
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-exclamation" id="fa-exclamation-css-modal" aria-hidden="true"></i>
-                            <span class="sr-only">About</span>About</h3>
+                            <span class="sr-only">About</span>&nbsp;&nbsp;&nbsp;About</h3>
                     </header>
                     <div class="cssmodal-container">
                         <!-- <div><img src="/assets/images/MarkerTTModal.png" width="200"></div> -->
                         <div><p>Please hover over the Google Map Markers - <img src="/assets/images/GoogleMapMarker.png" width="10" alt="Google Map Marker"> - for information on the Capital City of your choice.</p>
-                        <p>Click on the Overview button for Country details, and click on the Statistics button for simple statistics.</p><p>The Footer links are About - <i class="fa fa-exclamation" id="fa-exclamation-css-modal" aria-hidden="true"></i>
+                        <p>Click on the Overview button &nbsp; <button class="button">Overview</button>for Country details, and click on the Statistics button &nbsp; <button class="button">Statistics</button>for simple statistics.</p><p>The Footer links are About - <i class="fa fa-exclamation" id="fa-exclamation-css-modal" aria-hidden="true"></i>
                         <span class="sr-only">About</span> - which is this modal, API's - <i class="fa fa-file-code-o" id="fa-file-code-o-css-modal" aria-hidden="true"></i><span class="sr-only">API's</span> - providing links to the descriptions of the API's used on this website to provide data and functionality, Code Snippets - <i class="fa fa-code" id="fa-code-css-modal" aria-hidden="true"></i>
                         <span class="sr-only">Code Snippets</span> - providing links to tutorials and courses with knowledge and skills used on this website, Contact Form - <i class="fa fa-envelope-o" id="fa-envelope-o-css-modal" aria-hidden="true"></i>
-                        <span class="sr-only">Contact Form</span> - to provide much needed feedback (greatly appreciated), and Contact - <i class="fa fa-location-arrow" aria-hidden="true"></i> - in case you want to get in touch!</p></div>
+                        <span class="sr-only">Contact Form</span> - to provide greatly appreciated feedback, and Contact - <i class="fa fa-location-arrow" aria-hidden="true"></i> - in case you want to get in touch!</p></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-file-code-o" id="fa-file-code-o-css-modal" aria-hidden="true"></i>
-                            <span class="sr-only">API's</span>Application Programming Interfaces</h3>
+                            <span class="sr-only">API's</span>&nbsp;&nbsp;&nbsp;Application Programming Interfaces</h3>
                     </header>
                     <div class="cssmodal-container">
                         <div><a href="https://developers.google.com/maps/documentation/javascript/tutorial" target="_blank">Google Maps JavaScript API Description - to create the map and markers.</a></div>
@@ -129,7 +129,7 @@
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-code" id="fa-code-css-modal" aria-hidden="true"></i>
-                            <span class="sr-only">Code Snippets</span>Code Snippets</h3>
+                            <span class="sr-only">Code Snippets</span>&nbsp;&nbsp;&nbsp;Code Snippets</h3>
                     </header>
                     <div class="cssmodal-container">
                         <div><a href="https://codeinstitute.net/" target="_blank">Google Maps API - Code Institute walkthrough by Matt Rudge.</a></div>
@@ -148,7 +148,7 @@
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-envelope-o" id="fa-envelope-o-css-modal" aria-hidden="true"></i>
-                            <span class="sr-only">Contact Form</span>Contact Form</h3>
+                            <span class="sr-only">Contact Form</span>&nbsp;&nbsp;&nbsp;Contact Form</h3>
                     </header>
                     <div class="cssmodal-container">
                         <div class="center-form">
@@ -173,10 +173,13 @@
                 <div class="cssmodal-content">
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
-                        <h4>TrainIT (Corporate Train the Trainer)</h4>
+                        <h3><i class="fa fa-user" id="fa-user" aria-hidden="true"></i>
+                        <span class="sr-only">Naoise Olof Seán Gaffney</span>&nbsp;&nbsp;&nbsp;Naoise Olof Seán Gaffney</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <p><a href="https://www.google.ie/maps/dir//6+Old+Court+Close,+Ballycullen,+Dublin+24,+Ireland/@53.2743642,-6.3531917,16z/data=!4m9!4m8!1m0!1m5!1m1!1s0x48670b256a47fabf:0x8b35e55d6a01ad4e!2m2!1d-6.3488143!2d53.2743643!3e0" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i>Location: GaffCo Consulting.</a></p>
+                        <div><a href="https://naoisegaffney.github.io/Resume/index.html" target="_blank">My Resumé.</a></div>
+                        <div><a href="https://github.com/NaoiseGaffney" target="_blank">My GitHub.</a></div>
+                        <div><a href="https://ptd--gaffco.repl.co/index.html" target="_blank">GaffCo Consulting Professional Communication Competence.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
