--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -153,12 +153,12 @@
                     <div class="cssmodal-container">
                         <div class="center-form">
                             <h4>Please get in touch!</h4>
-                            <form onsubmit="return sendMail(this);">
+                            <form onsubmit="return sendMail(this);" id="feedbackform">
                                 <div><input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required />
                                     <div>
                                         <div><input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email: name@domain.com" required /></div>
                                         <span><textarea rows="3" cols="35" name="feedback" class="form-control" id="feedback" placeholder="Your comments and thoughts." required></textarea></span>
-                                        <div><button type="submit" value="send" class="button" id="contactsubmit">Send Feedback</button></div>
+                                        <div><button type="submit" value="send" class="button" id="contactsubmit">Send Feedback</button><p style="text-align: center;" id="sendmail-status"></p></div>
                                     </div>
                                 </div>
                             </form>
