Test: styling of CSS Footer Modals. Links on hover expand to 120%. Updated gStyle.css and gTest.html.

--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -94,9 +94,9 @@
                     <div class="cssmodal-container">
                         <!-- <div><img src="/assets/images/MarkerTTModal.png" width="200"></div> -->
                         <div><p>Please hover over the Google Map Markers - <img src="/assets/images/GoogleMapMarker.png" width="10" alt="Google Map Marker"> - for information on the Capital City of your choice.</p>
-                        <p>Click on the Overview button &nbsp; <button class="button">Overview</button>for Country details, and click on the Statistics button &nbsp; <button class="button">Statistics</button>for simple statistics.</p><p>The Footer links are About - <i class="fa fa-exclamation" id="fa-exclamation-css-modal" aria-hidden="true"></i>
-                        <span class="sr-only">About</span> - which is this modal, API's - <i class="fa fa-file-code-o" id="fa-file-code-o-css-modal" aria-hidden="true"></i><span class="sr-only">API's</span> - providing links to the descriptions of the API's used on this website to provide data and functionality, Code Snippets - <i class="fa fa-code" id="fa-code-css-modal" aria-hidden="true"></i>
-                        <span class="sr-only">Code Snippets</span> - providing links to tutorials and courses with knowledge and skills used on this website, Contact Form - <i class="fa fa-envelope-o" id="fa-envelope-o-css-modal" aria-hidden="true"></i>
+                        <p>Click on the Overview button &nbsp; <button class="button">Overview</button>for Country details, and click on the Statistics button &nbsp; <button class="button">Statistics</button>for simple statistics.</p><p>The Footer links are About - <i class="fa fa-exclamation" aria-hidden="true"></i>
+                        <span class="sr-only">About</span> - which is this modal, API's - <i class="fa fa-file-code-o" aria-hidden="true"></i><span class="sr-only">API's</span> - providing links to the descriptions of the API's used on this website to provide data and functionality, Code Snippets - <i class="fa fa-code" aria-hidden="true"></i>
+                        <span class="sr-only">Code Snippets</span> - providing links to tutorials and courses with knowledge and skills used on this website, Contact Form - <i class="fa fa-envelope-o" aria-hidden="true"></i>
                         <span class="sr-only">Contact Form</span> - to provide greatly appreciated feedback, and Contact - <i class="fa fa-location-arrow" aria-hidden="true"></i> - in case you want to get in touch!</p></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
@@ -112,12 +112,12 @@
                             <span class="sr-only">API's</span>&nbsp;&nbsp;&nbsp;Application Programming Interfaces</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <div><a href="https://developers.google.com/maps/documentation/javascript/tutorial" target="_blank">Google Maps JavaScript API Description - to create the map and markers.</a></div>
-                        <div><a href="https://openweathermap.org/api/one-call-api" target="_blank">OpenWeather API Description - adding real-time weather information to the marker tool-tips.</a></div>
-                        <div><a href="https://github.com/d3/d3/blob/master/API.md" target="_blank">D3 API Description - to display dynamic graphs and statistics.</a></div>
-                        <div><a href="https://www.emailjs.com/" target="_blank">EmailJS API Description - to enjoy user feedback to improve the website.</a></div>
-                        <div><a href="https://firebase.google.com/" target="_blank">"Built with Firebase &reg;" - to store and retrieve D3 and City data.</a></div>
-                        <div><a href="https://restcountries.eu/" target="_blank">REST Countries EU API Description - Global Country data to populate the Overview and Statistics Modals.</a></div>
+                        <div><a href="https://developers.google.com/maps/documentation/javascript/tutorial" target="_blank" class="modal-link-text">Google Maps JavaScript API Description - to create the map and markers.</a></div>
+                        <div><a href="https://openweathermap.org/api/one-call-api" target="_blank" class="modal-link-text">OpenWeather API Description - adding real-time weather information to the marker tool-tips.</a></div>
+                        <div><a href="https://github.com/d3/d3/blob/master/API.md" target="_blank" class="modal-link-text">D3 API Description - to display dynamic graphs and statistics.</a></div>
+                        <div><a href="https://www.emailjs.com/" target="_blank" class="modal-link-text">EmailJS API Description - to enjoy user feedback to improve the website.</a></div>
+                        <div><a href="https://firebase.google.com/" target="_blank" class="modal-link-text">"Built with Firebase &reg;" - to store and retrieve D3 and City data.</a></div>
+                        <div><a href="https://restcountries.eu/" target="_blank" class="modal-link-text">REST Countries EU API Description - Global Country data to populate the Overview and Statistics Modals.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
@@ -132,11 +132,11 @@
                             <span class="sr-only">Code Snippets</span>&nbsp;&nbsp;&nbsp;Code Snippets</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <div><a href="https://codeinstitute.net/" target="_blank">Google Maps API - Code Institute walkthrough by Matt Rudge.</a></div>
-                        <div><a href="https://youtu.be/Zxf1mnP5zcw" target="_blank">Google Maps API - Bill Traversy @ Traversy Media.</a></div>
-                        <div><a href="https://youtu.be/GXrDEA3SIOQ" target="_blank">OpenWeather API - OpenWeather API JavaScript example and walkthrough by Shanjah Raj.</a></div>
-                        <div><a href="https://www.udemy.com/course/build-data-uis-with-d3-firebase/" target="_blank">Udemy Course on D3 & Firebase by Shaun Pelling.</a></div>
-                        <div><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=2508942" target="_blank">Udemy Course on JavaScript the Complete Guide 2020 by Maximilian Schwarzmüller.</a></div>
+                        <div><a href="https://codeinstitute.net/" target="_blank" class="modal-link-text">Google Maps API - Code Institute walkthrough by Matt Rudge.</a></div>
+                        <div><a href="https://youtu.be/Zxf1mnP5zcw" target="_blank" class="modal-link-text">Google Maps API - Bill Traversy @ Traversy Media.</a></div>
+                        <div><a href="https://youtu.be/GXrDEA3SIOQ" target="_blank" class="modal-link-text">OpenWeather API - OpenWeather API JavaScript example and walkthrough by Shanjah Raj.</a></div>
+                        <div><a href="https://www.udemy.com/course/build-data-uis-with-d3-firebase/" target="_blank" class="modal-link-text">Udemy Course on D3 & Firebase by Shaun Pelling.</a></div>
+                        <div><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=2508942" target="_blank" class="modal-link-text">Udemy Course on JavaScript the Complete Guide 2020 by Maximilian Schwarzmüller.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
@@ -177,9 +177,9 @@
                         <span class="sr-only">Naoise Olof Seán Gaffney</span>&nbsp;&nbsp;&nbsp;Naoise Olof Seán Gaffney</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <div><a href="https://naoisegaffney.github.io/Resume/index.html" target="_blank">My Resumé.</a></div>
-                        <div><a href="https://github.com/NaoiseGaffney" target="_blank">My GitHub.</a></div>
-                        <div><a href="https://ptd--gaffco.repl.co/index.html" target="_blank">GaffCo Consulting Professional Communication Competence.</a></div>
+                        <div><a href="https://naoisegaffney.github.io/Resume/index.html" target="_blank" class="modal-link-text">My Resumé.</a></div>
+                        <div><a href="https://github.com/NaoiseGaffney" target="_blank" class="modal-link-text">My GitHub.</a></div>
+                        <div><a href="https://ptd--gaffco.repl.co/index.html" target="_blank" class="modal-link-text">GaffCo Consulting Professional Communication Competence.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
