Test: Updated all Modal (JS & CSS). REST API for Countries to update  Overview Modals. At the moment, getting all countires data is faster than only getting one.

--- a/test/Code Snippets/fetchEUStats.html
+++ b/test/Code Snippets/fetchEUStats.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="flag"></div>
+    <div id="status"></div>
 </body>
 <script src="/test/Code Snippets/fetchEUStats.js"></script>
 </html>
