--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -117,7 +117,7 @@
                         <div><a href="https://github.com/d3/d3/blob/master/API.md" target="_blank" class="modal-link-text">D3 API Description - to display dynamic graphs and statistics.</a></div>
                         <div><a href="https://www.emailjs.com/" target="_blank" class="modal-link-text">EmailJS API Description - to enjoy user feedback to improve the website.</a></div>
                         <div><a href="https://firebase.google.com/" target="_blank" class="modal-link-text">"Built with Firebase &reg;" - to store and retrieve D3 and City data.</a></div>
-                        <div><a href="https://restcountries.eu/" target="_blank" class="modal-link-text">REST Countries EU API Description - Global Country data to populate the Overview and Statistics Modals.</a></div>
+                        <div><a href="https://restcountries.eu/" target="_blank" class="modal-link-text">REST Countries EU API Description - Global Country data for Overview and Statistics Modals.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
