--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -93,7 +93,7 @@
                     </header>
                     <div class="cssmodal-container">
                         <!-- <div><img src="/assets/images/MarkerTTModal.png" width="200"></div> -->
-                        <div><p>Please hover over the Google Map Markers - <img src="/assets/images/GoogleMapMarker.png" width="10" alt="Google Map Marker"> - for information on the Capital City of your choice.</p>
+                        <div><p>Please click on the Google Map Markers - <img src="/assets/images/GoogleMapMarker.png" width="10" alt="Google Map Marker"> - for information on the Capital City of your choice.</p>
                         <p>Click on the Overview button &nbsp; <button class="button">Overview</button>for Country details, and click on the Statistics button &nbsp; <button class="button">Statistics</button>for simple statistics.</p><p>The Footer links are: About - <i class="fa fa-exclamation" aria-hidden="true"></i>
                         <span class="sr-only">About</span> - which is this modal, API's - <i class="fa fa-file-code-o" aria-hidden="true"></i><span class="sr-only">API's</span> - providing links to the descriptions of the API's used on this website to provide data and functionality, Code Snippets - <i class="fa fa-code" aria-hidden="true"></i>
                         <span class="sr-only">Code Snippets</span> - providing links to tutorials and courses with knowledge and skills used on this website, Contact Form - <i class="fa fa-envelope-o" aria-hidden="true"></i>
